--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "mykap-erp",
   "private": true,
@@ -11,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^0.14.2",
     "@supabase/supabase-js": "^2.43.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
