--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@google/genai": "^0.14.0",
     "@supabase/supabase-js": "^2.43.4",
+    "html-to-pdfmake": "^2.5.1",
     "jspdf": "^2.5.1",
+    "pdfmake": "^0.2.10",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20.14.0",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
